Fixed spacing for edit button Reduced opacity on search bg

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -504,18 +504,6 @@ a:hover {
   margin-right: 15px;
 }
 
-.docs-header .docs-header-tray .docs-cta .docs-button {
-  background: rgba(255, 255, 255, 0.2);
-  color: white;
-  border-color: white;
-}
-
-.docs-header .docs-header-tray .docs-cta .docs-button:hover {
-  background: white;
-  border-color: transparent;
-  color: #F52C6E;
-}
-
 .docs-header .docs-search {
   width: 100px;
 }
@@ -542,6 +530,7 @@ a:hover {
 }
 
 .docs-title .docs-improve a {
+  display: block;
   font: 0/0 a;
   text-shadow: none;
   color: transparent;
@@ -781,7 +770,7 @@ a:hover {
 
 .docs-search-input {
   border: none;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.1);
   color: white;
   display: block;
   font-size: 14px;
